# ChangeLog for sys-cluster/ganglia
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/ganglia/ChangeLog,v 1.57 2013/06/22 01:00:27 jsbronder Exp $

  22 Jun 2013; Justin Bronder <jsbronder@gentoo.org> -ganglia-3.2.0.ebuild:
  remove old

*ganglia-3.5.0 (15 Feb 2013)

  15 Feb 2013; Justin Bronder <jsbronder@gentoo.org> +ganglia-3.5.0.ebuild:
  version bump

  22 Sep 2012; Anthony G. Basile <blueness@gentoo.org> ganglia-3.3.7.ebuild:
  stable ppc, bug #428776

  22 Sep 2012; Agostino Sarubbo <ago@gentoo.org> ganglia-3.3.7.ebuild:
  Stable for amd64, wrt bug #428776

  22 Sep 2012; Agostino Sarubbo <ago@gentoo.org> ganglia-3.3.7.ebuild:
  fix typo

  19 Sep 2012; Andreas Schuerch <nativemad@gentoo.org> ganglia-3.3.7.ebuild:
  x86 stable, see bug 428776

  04 Sep 2012; Justin Bronder <jsbronder@gentoo.org> ganglia-3.3.7.ebuild:
  Disable static build, resolves #398995

*ganglia-3.3.7 (04 Sep 2012)

  04 Sep 2012; Justin Bronder <jsbronder@gentoo.org> +ganglia-3.3.7.ebuild:
  Bump to 3.3.7. Includes splitting the web interface to
  sys-cluster/ganglia-web to match upstream. Resolves #380981

  02 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org> -ganglia-3.1.2.ebuild,
  -ganglia-3.1.7-r2.ebuild, -ganglia-3.1.7-r3.ebuild:
  Drop old

  01 Feb 2012; Brent Baude <ranger@gentoo.org> ganglia-3.2.0.ebuild:
  Marking ganglia-3.2.0 ppc for bug 386277

  21 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> ganglia-3.2.0.ebuild:
  x86 stable wrt bug #386277

  15 Jan 2012; Agostino Sarubbo <ago@gentoo.org> ganglia-3.2.0.ebuild:
  Stable for AMD64, wrt security bug #386277

*ganglia-3.2.0 (27 Sep 2011)

  27 Sep 2011; Justin Bronder <jsbronder@gentoo.org> +ganglia-3.2.0.ebuild:
  Version bump, handle setup for dwoo

  23 Jun 2011; Brent Baude <ranger@gentoo.org> ganglia-3.1.7-r2.ebuild:
  Marking ganglia-3.1.7-r2 ppc for bug 366679

  27 May 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> ganglia-3.1.7-r2.ebuild: