@@ -10,14 +10,16 @@ AUX gmond.rc 345 SHA256 c58568992ddad460a79278aae59d0246b74ae167b70d05885775c511
 AUX gmond.rc-2 472 SHA256 27327531dbae7299efd1afeee61cb2d17a3a1ec999896e1589d5ca89692ab251 SHA512 5bfbccb9c6e2c7b013c77caa3bc015e9b131ef902efb24b6959cc1afd02f62cc2e49e5ef61208465955a21a10bb03d58ae766f5b6852de3f6afd045d9c85ff5e WHIRLPOOL 2522dbd240f006c7f07fde7ea58fbc76b5d55df1b59786b03562ccc5d86f2acdd3a2d72c2031259b69c7485504bbdd842d33b40dc894ccbeac0b6531c33214f1
 DIST ganglia-3.3.7.tar.gz 1797370 SHA256 8894dbc22c35d699ad125c6d5f9de0d67fd0217d328212479fdff6978937af43 SHA512 aba712a0067a0fb837043e197b1e0d4d5cf77dd80d48bec3431b8fe73ed841c7d94aff31b9d79146a2d8e85d07ba6146dc4eccc0d635567864c2c8ce6f9c32de WHIRLPOOL 45478243b0a1cb7f4a193874fb848bf13690689079a815c77476fe25caa1a2e0c3b80c97bf2239ae444ac03746c4277c75254b6e9fe4aa86c6687f1279c6e742
 DIST ganglia-3.5.0.tar.gz 1234790 SHA256 43a9a6349e2c04cd106a41f89d4cf544de05d4afe5d3be9918dd187485c7e691 SHA512 0d1e547cdfd8eb0ac57b9b8bb4c0f2d9dc67d30de08201f1c4935c356e4ae8fc283e1ce63c16aafeb8f74b1b837c336f66d42cb65b24083933ef03f44139dc24 WHIRLPOOL 118bc8d6f830cd26bbdb0f4309cf9312d1aa78f36fee58e0fa92e9c9504a244c7bbf3d1a3aab445fa5fe3bc93325acd55bf91b2673b95c7fc58866619b0c0f0f
+DIST ganglia-3.6.0.tar.gz 1248273 SHA256 89eae02e1a117040d60b3b561fe55f88d7f8cf41b94af1492969ef68e6797886 SHA512 2a05d37787f1440c0c4aa91cdf0f4f4cb39c840b3b0fdcd6fe58cfb5892a75f81d36f6191c83c17558c37154298268df74fa255d2c940a8b84a7bf3ddb102394 WHIRLPOOL 7d62d13231247e5f8a56263f3c1ef10cd6f2bb84fe614ae47a633d5f2f212eceb3a461f642572e18173ac7c71160b6463dab8911d381944f262b651b8b9feda9
 EBUILD ganglia-3.3.7.ebuild 2440 SHA256 424c772e2d7da0d16fda9cc172ed33964081a8df29a82710e21366ed855f333d SHA512 452e15cf77e7c944961783e45b16e4f9fef21c144992ac823ba653337f99fc285a3797be767680cab58abe31b9cc82bc742d5a0e3c415c1531b16aa11e63a1f6 WHIRLPOOL 1fd23ff4d3c3df8d6c19e4219c18aad1cc0ccf625d7796e1bdf8881a13202b32a38f14d9fc2eb20f6fae12b4b4dda9e6a0923d3da0eaa5cc1a486ec2ca91d8c0
 EBUILD ganglia-3.5.0.ebuild 2237 SHA256 b32636acf5074f7990d77807dccc9bb590206e69fe774343947056a15c209611 SHA512 456ccd35ddcf3b6db5a7ad6d67db4bd9dd98cd08af1023a0c091ca27c316222ae9c070232a7b6b76c3812a6aae894a12793e695a21610409973ee25fae02cfe8 WHIRLPOOL edb4a22625dc35b4e85fd9de5d56387f6b2809c0eeea16b2257f9354ce2f2bc4bb389f71c2088270b3e57e288ac0344ce2b400325c389dc9e63848c853e31d3c
-MISC ChangeLog 10775 SHA256 6702d526f90a255efa26e72c0e76dc0c2432316d2b62c6a317ad159ffe92824f SHA512 4fc496debe054ce508eb87063c492e7c2d8f09ba021bc0a780fcdf45c4fa6bac2d659f5450c596fd08328f720eb6c7439fc2c24c4ca5d91354545459e053162a WHIRLPOOL c6b81a07aef47011997259a80e58e3187234e30381f4fd2149984edf63a9edfa5d290107fa02fcc1fee093b35cfd5905d368c3e411341287762c6949457297d2
+EBUILD ganglia-3.6.0.ebuild 2237 SHA256 46e7a9f9ca355666baddc2ce517de891929d74a4c413f87e06f8e9ab70628c48 SHA512 cd8d88bffd2390be1d66c4cc61e9e0835a6bd237711678d4bcfc8dcbe36ff12246dc1ce8a6db65a7654fd80cb8ea441ef85cea1c982596bbb743975b730d917d WHIRLPOOL 74ab09ae23cb7f79b852208cb4343af5284b4c3d37a25e24e8cbf465144fa94553f26807cfcd5fa30164215e641e11d04c7eb2c5a088e8ae879888849483541f
+MISC ChangeLog 10889 SHA256 aceb1a247077945d26fc7e175c18790982a118ef9c40caf6ef91682642342c20 SHA512 e6dd69a2f0d240a3ffcbaf5f517d3dbfa9627355519662821f84ef2afbc2622cea9c49e53e275f75d9448850dd250392b276d9241c9b2e3f9673718dfe1bb3a2 WHIRLPOOL 425baa1b7b5257e3127ef629314e8c4ee9f5d5c0f3f46870e3bc70d1383bda7527f67126ee8f22687cc2b6dc5ab7343ac49c028fe478c9b886ad4fd4354e7a27
 MISC metadata.xml 228 SHA256 867e2c9cf08802c1ae7c8a1e84fafa792a531488dc15c7e8efd5596b33465d30 SHA512 ced4d7a8792403fe33b4500e75af897dfda1997dbea848fb4c699555e8d1fcad08f54b7c446ecc35306d025edde55d151d89c5e6ba7dba2244854637d4248d28 WHIRLPOOL d3195ff37ccca6b73e2b576c08e70cb057f222608b072b4ce5852522447cd9659d3b86a94a10b97635e82194b41d0f60715ac81cb336d8f4919b914738b1f3ef
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlHE9zIACgkQ4MrvBE1wQ8nT4ACdFO2cXQJZfZRmu9Z1MgrFarI0
-QW0An1uUZfB5BbOb1K1h0wk3HKQ5hUrJ
-=Fo4K
+iEYEAREIAAYFAlHE+B0ACgkQ4MrvBE1wQ8l16ACfWtppKSH1eL8HOkXNN1BAVsEu
+YucAn2jKvnZJRBatLIge07vEOEgb0mhP
+=sGOP
 -----END PGP SIGNATURE-----
