@@ -1,6 +1,11 @@
 # ChangeLog for sys-cluster/ganglia
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/ganglia/ChangeLog,v 1.57 2013/06/22 01:00:27 jsbronder Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/ganglia/ChangeLog,v 1.58 2013/06/22 01:04:28 jsbronder Exp $
+
+*ganglia-3.6.0 (22 Jun 2013)
+
+  22 Jun 2013; Justin Bronder <jsbronder@gentoo.org> +ganglia-3.6.0.ebuild:
+  bump
 
   22 Jun 2013; Justin Bronder <jsbronder@gentoo.org> -ganglia-3.2.0.ebuild:
   remove old
